# moos-ivp-douglas

./: CMakeLists.txt  README  README.md
.svn/: wc.db
log/teste_10_6_2023_____01_18_18/: teste_10_6_2023_____01_18_18._moos  teste_10_6_2023_____01_18_18.alog  teste_10_6_2023_____01_18_18.ylog
log/teste_10_6_2023_____01_18_59/: teste_10_6_2023_____01_18_59._moos  teste_10_6_2023_____01_18_59.alog  teste_10_6_2023_____01_18_59.ylog
log/teste_10_6_2023_____01_26_47/: alfa._bhv  teste_10_6_2023_____01_26_47._moos  teste_10_6_2023_____01_26_47.alog  teste_10_6_2023_____01_26_47.ylog
log/teste_10_6_2023_____01_29_14/: teste_10_6_2023_____01_29_14._moos  teste_10_6_2023_____01_29_14.alog  teste_10_6_2023_____01_29_14.ylog
log/teste_10_6_2023_____01_30_41/: teste_10_6_2023_____01_30_41._moos  teste_10_6_2023_____01_30_41.alog  teste_10_6_2023_____01_30_41.ylog
log/teste_10_6_2023_____01_34_51/: teste_10_6_2023_____01_34_51._moos  teste_10_6_2023_____01_34_51.ylog
log/teste_10_6_2023_____01_45_31/: teste_10_6_2023_____01_45_31._moos  teste_10_6_2023_____01_45_31.ylog
log/teste_10_6_2023_____01_49_42/: teste_10_6_2023_____01_49_42._moos  teste_10_6_2023_____01_49_42.ylog
log/teste_10_6_2023_____01_58_01/: teste_10_6_2023_____01_58_01._moos  teste_10_6_2023_____01_58_01.ylog
log/teste_18_3_2023_____22_30_55/: alfa._bhv  teste_18_3_2023_____22_30_55._moos  teste_18_3_2023_____22_30_55.alog  teste_18_3_2023_____22_30_55.ylog
log/teste_18_3_2023_____22_32_33/: teste_18_3_2023_____22_32_33._moos  teste_18_3_2023_____22_32_33.alog  teste_18_3_2023_____22_32_33.ylog
log/teste_18_3_2023_____22_36_17/: teste_18_3_2023_____22_36_17._moos  teste_18_3_2023_____22_36_17.ylog
log/teste_19_3_2023_____09_10_12/: teste_19_3_2023_____09_10_12._moos  teste_19_3_2023_____09_10_12.alog  teste_19_3_2023_____09_10_12.ylog
log/teste_19_3_2023_____09_14_34/: teste_19_3_2023_____09_14_34._moos  teste_19_3_2023_____09_14_34.alog  teste_19_3_2023_____09_14_34.ylog
log/teste_19_3_2023_____09_19_19/: teste_19_3_2023_____09_19_19._moos  teste_19_3_2023_____09_19_19.alog  teste_19_3_2023_____09_19_19.ylog
log/teste_1_3_2023_____21_15_07/: teste_1_3_2023_____21_15_07._moos  teste_1_3_2023_____21_15_07.alog  teste_1_3_2023_____21_15_07.ylog
log/teste_1_3_2023_____21_25_23/: alfa._bhv  teste_1_3_2023_____21_25_23._moos  teste_1_3_2023_____21_25_23.alog  teste_1_3_2023_____21_25_23.ylog
log/teste_1_3_2023_____21_40_00/: teste_1_3_2023_____21_40_00._moos  teste_1_3_2023_____21_40_00.alog  teste_1_3_2023_____21_40_00.ylog
log/teste_1_3_2023_____21_41_48/: alfa._bhv  teste_1_3_2023_____21_41_48._moos  teste_1_3_2023_____21_41_48.alog  teste_1_3_2023_____21_41_48.ylog
log/teste_1_3_2023_____21_44_52/: alfa._bhv  teste_1_3_2023_____21_44_52._moos  teste_1_3_2023_____21_44_52.alog  teste_1_3_2023_____21_44_52.ylog
log/teste_21_2_2023_____01_54_07/: teste_21_2_2023_____01_54_07._moos  teste_21_2_2023_____01_54_07.alog  teste_21_2_2023_____01_54_07.ylog
log/teste_21_2_2023_____01_58_55/: teste_21_2_2023_____01_58_55._moos  teste_21_2_2023_____01_58_55.alog  teste_21_2_2023_____01_58_55.ylog
log/teste_27_2_2023_____23_21_51/: teste_27_2_2023_____23_21_51._moos  teste_27_2_2023_____23_21_51.alog  teste_27_2_2023_____23_21_51.ylog
log/teste_27_2_2023_____23_40_57/: teste_27_2_2023_____23_40_57._moos  teste_27_2_2023_____23_40_57.alog  teste_27_2_2023_____23_40_57.ylog
log/teste_27_2_2023_____23_42_12/: teste_27_2_2023_____23_42_12._moos  teste_27_2_2023_____23_42_12.alog  teste_27_2_2023_____23_42_12.ylog
log/teste_27_2_2023_____23_50_30/: alfa._bhv  teste_27_2_2023_____23_50_30._moos  teste_27_2_2023_____23_50_30.alog  teste_27_2_2023_____23_50_30.ylog
log/teste_28_2_2023_____12_11_17/: alfa._bhv  teste_28_2_2023_____12_11_17._moos  teste_28_2_2023_____12_11_17.alog  teste_28_2_2023_____12_11_17.ylog
log/teste_28_2_2023_____12_13_34/: teste_28_2_2023_____12_13_34._moos  teste_28_2_2023_____12_13_34.alog  teste_28_2_2023_____12_13_34.ylog
log/teste_28_2_2023_____12_15_35/: teste_28_2_2023_____12_15_35._moos  teste_28_2_2023_____12_15_35.alog  teste_28_2_2023_____12_15_35.ylog
log/teste_28_2_2023_____12_16_04/: teste_28_2_2023_____12_16_04._moos  teste_28_2_2023_____12_16_04.alog  teste_28_2_2023_____12_16_04.ylog
log/teste_28_2_2023_____12_16_16/: teste_28_2_2023_____12_16_16._moos  teste_28_2_2023_____12_16_16.alog  teste_28_2_2023_____12_16_16.ylog
log/teste_28_2_2023_____12_16_30/: teste_28_2_2023_____12_16_30._moos  teste_28_2_2023_____12_16_30.alog  teste_28_2_2023_____12_16_30.ylog
log/teste_3_2_2023_____00_59_34/: alder._bhv  (+4 more)
log_xyz/: output_20230802_222219.xyz  output_20230802_222245.xyz  output_20230802_223737.xyz  output_20230802_225238.xyz  output_20230802_225324.xyz
src/: CMakeLists.txt
src/iDivisorNMEA/: CMakeLists.txt  DivisorNMEA.cpp  DivisorNMEA.h  DivisorNMEA_Info.cpp  DivisorNMEA_Info.h  iDivisorNMEA.moos  main.cpp
src/iDivisorNMEA/libais/: CMakeLists.txt  ais.cpp  ais1_2_3.cpp
src/iSerial/: CMakeLists.txt  Serial.cpp  Serial.h  Serial_Info.cpp  Serial_Info.h  iSerial.moos  main.cpp
src/lib/documentation/: MOOSAppDocumentation.cpp  MOOSAppDocumentation.h
src/lib_clearpath/: CMakeLists.txt  Logger.cpp  Makefile  Makefile_cRIO  Message.cpp  Message.h  Message_cmd.cpp  Message_cmd.h  Message_data.cpp  Message_data.h  Message_request.cpp  Message_request.h  Number.cpp  Transport.cpp  Transport.h  clearpath.h  crc.cpp  cwrap.cpp  dead_reckon.h  index.html  keyboard_ctrl.h  linux_serial.cpp  windows_serial.cpp
src/pIMU/: CMakeLists.txt  IMU.cpp  IMU.h  IMU_Info.cpp  IMU_Info.h  main.cpp  pIMU.moos
src/pIMU/examples/: xbow440_example.cpp
src/pIMU/python/: test.py
src/pIMU/serial/: CMakeLists.txt
src/pIMU/src/: xbow440.cpp
src/pOdometry/: Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pUDP_Receiver/: CMakeLists.txt  UDP_Receiver.cpp  UDP_Receiver.h  UDP_Receiver_Info.cpp  UDP_Receiver_Info.h  main.cpp  pUDP_Receiver.moos
src/pXYZ/: CMakeLists.txt  XYZ.cpp  XYZ.h  XYZ_Info.cpp  XYZ_Info.h  main.cpp  pXYZ.moos
(+676 files in other folders)
